# brbox

./: CMakeLists.txt  README.md  build-image.sh  prepare-buildroot.sh
sources/: CMakeLists.txt
sources/cmake/: brbox-raspi1-arm.cmake  brbox-x86.cmake  lede-a5v11-mips.cmake
sources/firmware/: .usbconfig.h.kate-swp
sources/firmware/attiny85-hid/: main.c  readme.txt
sources/firmware/attiny85-hid-rotary/: Makefile  README.md  main.c  readme.txt  usbconfig.h
sources/firmware/attiny85-hid-rotary/hexfiles/: attiny85-volume-control-hid.hex
sources/firmware/attiny85-hid-rotary/usbdrv/: usbdrv.h
sources/firmware/attiny85-hid/usbdrv/: usbdrv.c
sources/firmware/attiny85-i2c-tiny-usb/: readme.txt
sources/firmware/binaries/: digispark-attiny85-micronucleus.hex
sources/firmware/micronucleus-cmdline/: littleWire_util.h  micronucleus  readme.txt
sources/firmware/mx-usb-isp/: ATmega88.hex  firmware.hex  progisp1.72.rar  readme.txt
sources/kmods/: CMakeLists.txt
sources/kmods/cmnsrc/: chain.c  chain.h  sl_chain.c
sources/kmods/genintrdrv/: CMakeLists.txt  Kbuild  Makefile  readme.txt
sources/kmods/genintrdrv/kmod/: Makefile  chain.c  chain.h  genintrdrv.c  sl_chain.c  sl_chain.h
sources/kmods/genintrdrv/kmodclt/: CMakeLists.txt
sources/kmods/i2c-stub/: Kbuild  Makefile  readme.txt
sources/kmods/i2c-tiny-usb/: Makefile
sources/kmods/usb-iss/: Kbuild  Makefile  README
sources/kmods/usb-iss/kmod/: i2c-devantech-iss.c
sources/lib/: CMakeLists.txt  readme.txt  toolchain-arm-backup.cmake
sources/lib/lib-adav/: CMakeLists.txt
sources/lib/lib-adav-old/: .cproject  .project  CMakeLists.txt
sources/lib/lib-adav-old/include/: ADCmdlineHelper.hpp  ADCmnCltCmdProcessor.hpp  ADCmnDevTypes.h  ADCmnPortList.h  ADCmnStringProcessor.hpp  ADCommon.hpp  ADEvntMgr.hpp  ADEvntNotifier.hpp  ADFpgaMem.hpp  ADJsonChecker.hpp  ADJsonRpcClient.hpp  ADJsonRpcMapper.hpp  ADJsonRpcMgr.hpp  ADJsonRpcProxy.hpp  ADNetServer.hpp  ADRuntimeMinCounter.hpp  ADSerial.hpp  ADSerialProto.hpp  ADSettings.hpp  ADSonOffHttpClient.hpp  ADSysInfo.hpp  ADTaskWorker.hpp  ADThreadedSockClient.hpp  ADTimer.hpp  BitBang_I2C.h  DisplayDevice.hpp  I2CBusAccess.h  I2CDS3231.hpp  I2CDualPcfLcd.hpp  I2CGroveRgbLcd.hpp  I2CPcfLcd.hpp  I2CSsd1306.hpp  I2CTAOS3414Reg.h  I2CTAOS3414Sensor.hpp  JsonCmnDef.h  LightSensor.hpp  RTCDevice.hpp  glcdfont.h  ss_oled.h
sources/lib/lib-adav-old/src/: ADCmdlineHelper.cpp  ADCmnCltCmdProcessor.cpp  ADCmnStringProcessor.cpp  ADEvntMgr.cpp  ADEvntNotifier.cpp  ADFpgaMem.cpp  ADGenericChain.cpp  ADJsonChecker.cpp  ADJsonRpcClient.cpp  ADJsonRpcMapper.cpp  ADJsonRpcMgr.cpp  ADJsonRpcProxy.cpp  ADNetClient.cpp  ADNetServer.cpp  ADRuntimeMinCounter.cpp  ADSerial.cpp  ADSerialProto.cpp  ADSettings.cpp  ADSonOffHttpClient.cpp  ADSysInfo.cpp  ADTaskWorker.cpp  ADThread.cpp  ADThreadedSockClient.cpp  ADTimer.cpp  BitBang_I2C.cpp  DisplayDevice.cpp  I2CBusAccess.cpp  I2CDS3231.cpp  I2CDualPcfLcd.cpp  I2CGroveRgbLcd.cpp  I2CPcfLcd.cpp  I2CSsd1306.cpp  I2CTAOS3414Sensor.cpp  LightSensor.cpp  RTCDevice.cpp  ss_oled.cpp
sources/lib/lib-adav/include/: ADCmnStringProcessor.h  ADCommon.h  ADFpgaMem.h  ADGenericChain.h  ADJsonCmnDef.h  ADJsonRpcMapper.h  ADJsonRpcProxy.h  ADNetClient.h  ADNetServer.h  ADRuntimeMinCounter.h  ADSerial.h  ADSerialProto.h  ADSettings.h  ADSysInfo.h  ADTaskWorker.h  ADThread.h
sources/lib/lib-adav/src/: ADCmnStringProcessor.cpp  ADFpgaMem.cpp  ADGenericChain.cpp  ADJsonRpcMapper.cpp  ADJsonRpcProxy.cpp  ADNetClient.cpp  ADNetServer.cpp  ADRuntimeMinCounter.cpp  ADSerial.cpp  ADSerialProto.cpp  ADSettings.cpp  ADSysInfo.cpp  ADTaskWorker.cpp  ADThread.cpp  ADTimer.cpp
sources/lib/lib-display/: CMakeLists.txt  readme.txt
sources/lib/lib-display/include/: Adafruit_GFX.h  ArduiPi_OLED_lib.h
sources/lib/lib-display/src/: Adafruit_GFX.cpp  bcm2835.c
sources/lib/lib-ilclient/: CMakeLists.txt
sources/lib/lib-onion/: CMakeLists.txt
sources/lib/lib-settings/: CMakeLists.txt
sources/lib/lib-settings/include/: settings.h  strmap.h
sources/misc_binaries/: CMakeLists.txt  gst-loop.sh  omx-loop.sh
sources/patches/bbb-linux-patches/: linux-0002-arm-Enable-bbb-dtsi-i2c2-i2c3.patch
sources/sample-media/: CMakeLists.txt  omx-key-config.txt
sources/scripts/baytrail_update/: CMakeLists.txt  baytrail-update  fstab
sources/scripts/common/: find-devtype
sources/scripts/custom-startups/: rc.local
sources/scripts/postbootup/: CMakeLists.txt  S79ZPostBootInit  rc.local
sources/services/: CMakeLists.txt
sources/services/apisrv/: CMakeLists.txt
sources/services/bboxsms/: CMakeLists.txt
sources/services/dispsrv/: CMakeLists.txt
sources/services/gpioctl/: CMakeLists.txt  readme.txt
sources/services/hotwire/: CMakeLists.txt  readme.txt
sources/services/i2csrv/: README.md
sources/services/lightsense/: CMakeLists.txt
sources/services/modbussrv/: CMakeLists.txt
sources/services/monitsrv/: CMakeLists.txt
sources/services/smarteye/: CMakeLists.txt
sources/services/sysmgr/: CMakeLists.txt
sources/services/xmproxy/: CMakeLists.txt
sources/testing/: simplified-gst-pipeline.sh
sources/testing/scripts/: operation.sh
sources/utils/: CMakeLists.txt
sources/utils/brbox-mkimage/: CMakeLists.txt  Makefile  image.h  mkimage.c  zconf.h
sources/utils/eeprog-0.7.6/: 24cXX.c  24cXX.h  CMakeLists.txt  Makefile  README  WARNING  eeprog.c  testeeprom.sh
sources/utils/fb-test-app/: .gitignore  Makefile  common.c  common.h  fb-string.c  fb-test.c  font_8x8.c  offset.c  perf.c  rect.c
sources/utils/fb-test-app.git/: config  packed-refs
sources/utils/hello_video/: CMakeLists.txt
sources/utils/i2c-oled/: Android.h  Inspire.h  Q_NPN.h  bb_oled.c  box128x64.h
sources/utils/i2c-tiny-usb/: readme.txt
sources/utils/lan9512-blink/: Makefile  README  llctl.c
sources/utils/libtester/: CMakeLists.txt
sources/utils/mips-update/: CMakeLists.txt  mips-update.sh
sources/utils/playloop/: playloop.c  readme.txt
sources/utils/pngview/: Makefile
sources/utils/scripts/: testeeprom.sh
sources/utils/usb-relay-ctl/: usb-relay-ctl.c
(+395 files in other folders)
